@@ -11,7 +11,8 @@ V1.7.3
 * better memory management of pattern data (up to 10mb savings!) (pooplog)
 * optimized machine indexing and also machine view rendering (pooplog)
 * new cache.map file format with many improvements - making psycle open quicker for your pleasure (pooplog)
-* psycle now names new machines with instrument number (ie 02:Sampler) (pooplog)
+* psycle now names new machines with numbers if duplicate name exists (pooplog)
+* psycle can display machines' number (ie 02:Sampler) - toggleable (pooplog)
 * now marks missing machines that were replaced by dummy with an X (pooplog)
 * machine names can be longer now (pooplog)
 ! sampler doesn't crash when no instrument is specified any more (pooplog)
